# github-mcp-safe

./: .gitignore  AWESOME-MCP-PR.md  BUILD-WINDOWS-EXE.ps1  DEPLOY.ps1  LICENSE  README-WINDOWS-SECTION.md  README.md  SMITHERY-SUBMISSION-GITLAB.txt  SMITHERY-SUBMISSION-V2.md  SMITHERY-SUBMISSION.txt  github-mcp-safe-windows.spec  github_client.py  main.py  pyproject.toml  rate_limiter.py  server.py  smithery.yaml
src/github_mcp_safe/: __init__.py  github_client.py  rate_limiter.py  server.py
